--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "@actions/github": "^5.0.0",
     "fs-extra": "^11.1.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.3"
+  },
+  "scripts": {
+    "build": "ncc build index.js -o dist"
   }
 }
